assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:100,300,600|Roboto:300,400,500');

/*--------------------------------------------------General Styling */

body {
    background-color: #f7f4e5;
    font-family: "Roboto", sans-serif;
}

h1,
h2,
h3,
h4 {
    font-family: "Poppins", sans-serif;
}

a,
a:hover {
    color: #000;
    text-decoration: none;
}

ul {
    list-style-type: none;
    padding: 0;
}

.hr-default {
    border: none;
    border-top: medium double #000;
    width: 40%;
    margin: 10px auto;
}

.list-default {
    margin-left: 30px;
}

.list-default .list-name {
    margin-top: 20px;
}

.list-default i {
    display: inline-block;
    width: 40px;
    text-align: center;
    padding-right: 10px;
}

.container-fluid {
    padding: 0;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

.section-default {
    margin-top: 130px;
}

.section-content {
    padding-bottom: 20px;
}

.section-heading {
    height: 150px;
}

.section-heading .section-name {
    color: #f7f4e5;
    line-height: 150px;
    background-color: rgba(0, 0, 0, 0.3);
    margin: 0;
}

.section-item {
    padding-top: 20px;
    padding-bottom: 20px;
}

.section-item img {
    padding: 0 15px;
}

.section-info {
    padding: 10px 30px;
    margin-top: 10px;
}

/* Icons */

.bordered-icon {
    width: 36px;
    height: 36px;
    padding-top: 13px;
    margin: 4px 7px;
    border-radius: 50%;
    border: 1px solid #f7f4e5;
    font-size: 17px;
    line-height: 7px;
    text-align: center;
    color: #f7f4e5;
    background-color: transparent;
}

/*--------------------------------------------------Navigation */

.navbar-main {
    margin-bottom: 0;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    background-color: transparent;
    border: 0;
    z-index: 1031;
}

.navbar>.container-fluid>.col-sm-6 {
    padding: 0;
}

.navbar-main,
.navbar-bg-image {
    min-height: 0;
}

/* Navbar collapse */

.navbar-main .navbar-collapse,
.navbar-bg-image .navbar-collapse {
    display: block;
    height: 0 !important;
    overflow: hidden;
    border-color: transparent;
}

.navbar-collapse.in {
    max-height: 100vh;
    height: 100vh !important;

    transition: height 0.5s ease;
}


.navbar-bg-image .navbar-collapse {
    background-color: #525252;
    width: 50%;
    /*background: url(../images/bg-home.jpeg) no-repeat center center fixed;*/
    /*-webkit-background-size: cover;*/
    /*-moz-background-size: cover;*/
    /*-o-background-size: cover;*/
    /*background-size: cover;*/
}

.navbar-main .navbar-collapse {
    background-color: #000;
    border: 0;
}

.navbar-nav-container {
    height: 100vh;
    /* Vertically align content of container */
    display: flex;
    align-items: center;
    opacity: 0;
}

#navbar.in .navbar-nav-container {
    opacity: 1;
    transition: opacity 0.2s ease-in 0.4s;
}

.navbar-nav-wrapper {
    width: 100%;
}

.navbar-nav {
    margin-left: 30px;

}

.navbar-nav>li {
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 16px;
    margin-bottom: 30px;
}

.navbar-nav>li>a {
    display: inline;
}

.navbar-nav>.home {
    font-weight: 300;
    margin-left: -20px;
}

.navbar-default .navbar-nav>li>a,
.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li.active {
    color: #f7f4e5;
    background-color: transparent;
}

.nav-links,
.nav-icons {
    display: none;
}

#navbar.in .nav-links,
#navbar.in .nav-icons {
    display: block;
}

.nav-links {
    margin-left: 60px;
}

.nav-icons {
    text-align: center;
    margin-top: 20px;
}

.contact-links {
    margin-bottom: 20px;
}

/* Navigation toggle button */

#nav-toggle {
    display: block;
    position: fixed;
    top: 45vh;
    right: 10px;
    z-index: 1;
    margin: 0;
}

#nav-toggle i {
    width: 50px;
    height: 50px;
    padding-top: 20px;
    border-radius: 50%;
    border: 2px solid #f7f4e5;
    font-size: 25px;
    line-height: 7px;
    text-align: center;
    color: #f7f4e5;
    background-color: rgba(195, 24, 0, 0.9);

}

#nav-toggle,
#nav-toggle:focus,
#nav-toggle:hover {
    color: #f7f4e5;
}

#navbar.in~#nav-toggle>.fa-bars:before {
    content: "\f00d";
}

/* Maintain toggle nav in table and desktop */

.navbar-nav {
    float: none!important;
}

.navbar-nav>li {
    float: none;
}

/*--------------------------------------------------Header */

.header {
    position: absolute;
    top: 10px;
    left: 0;
    right: 0;
    z-index: 1;
}

.heading a {
    display: inline-block;
}

.home-heading a {
    color: #f7f4e5;
}

.heading span {
    display: block;
}

.heading hr {
    border: none;
    border-top: medium double #000;
    margin-top: 0;
    margin-bottom: -3px;
    text-align: center;
}

.home-heading hr {
    border-color: #f7f4e5;
}

/*--------------------------------------------------Home */

.home-section .bg-video {
    position: fixed;
    top: 0;
    left: -85%;
    min-width: 100%;
    min-height: 100%;
    z-index: -1;
}

.home-section .home-overlay {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.6);
}

/* Callout */

.home-section .callout-container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 100vh;
    /* Vertically align content of container */
    display: flex;
    align-items: center;
    justify-content: center;
}

.home-section .callout-container .jumbotron {
    background-color: transparent;
    color: #f7f4e5;
    font-family: "Poppins", sans-serif;
}

.home-section .callout-container h2 {
    font-weight: 100;
}

.home-section .callout-container .jumbotron span {
    display: block;
    margin-bottom: 10px;
}

.home-section .callout-btn {
    margin-top: 20px;
    color: #f7f4e5;
    background-color: #c31800;
    border-color: #c31800
}

/* Contact */

.home-section .contact-container {
    position: absolute;
    bottom: 0;
    width: 100%;
}

.home-section .contact-container {
    position: absolute;
    bottom: 0;
    width: 100%;
}

.home-section .contact-container .well {
    background-color: transparent;
    color: #f7f4e5;
    border-color: #f7f4e5;
    padding: 14px;
    height: 100px;
}

.home-section .contact-container .well a {
    color: #f7f4e5;
    display: block;
}

.home-section .contact-container .well i {
    display: block;
    margin: 10px auto;
}

/*--------------------------------------------------About */

.about-section .section-heading {
    background: url(../images/about-section.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.about-links {
    background-color: #52342a;
    padding-top: 20px;
    padding-bottom: 20px;
}

.about-link {
    border: 1px solid #000;
    height: 150px;
    margin-top: 10px;
}

.about-link a {
    display: block;
    height: 100%;
    line-height: 150px;
    background-color: rgba(0, 0, 0, 0.3);
    color: #f7f7e5;
}

.about-link-lessons {
    margin-left: 30px;
    background: url(../images/about-lessons.jpeg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.about-link-livery {
    margin-right: 30px;
    background: url(../images/about-livery.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/*--------------------------------------------------Livery*/

.livery-section .section-heading {
    background: url(../images/about-livery.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.facilities {
    padding: 0 15px;
}

.livery-section .facilities {
    background-color: #d6d3c4;
}

/*--------------------------------------------------Lessons*/

.lessons-section .section-heading {
    background: url(../images/lessons-section.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.lessons-container {
    padding: 0;
}

.camps {
    background-color: #d6d3c4;
}

/*--------------------------------------------------Footer */

.footer {
    background-color: #333;
    color: #f7f4e5;
    padding: 30px;
}

.footer-links {
    margin-top: 20px;
}

/*--------------------------------------------------Media Queries */

@media (min-width: 540px) {
    .home-section .bg-video {
        left: -50%;
    }
    .about-link {
        height: 200px;
    }
    .about-link a {
        line-height: 200px;
    }
}

@media (min-width: 768px) {
    /* General */
    .row-table {
        display: table;
    }
    .table-column {
        display: table-cell;
        float: none;
    }
    .section-info {
        padding: 10px 40px;
    }
    /* Home */
    .home-section .bg-video {
        left: -28%;
    }
    /* About */
    .about-link {
        height: 200px;
        margin-top: 20px;
    }
    .about-link a {
        line-height: 200px;
    }
    .about-link-lessons {
        margin-right: 10px;
    }
    .about-link-livery {
        margin-left: 10px;
    }
    /* Lessons */
    .lessons-container .camps {
        background-color: #f7f4e5;
    }
    .facilities {
        background-color: #d6d3c4;
        padding-right: 20px;
    }
    .facilities .list-default {
        margin-left: 30px;
    }
}

@media (min-width: 992px) {
    /* General */
    .home-section .bg-video {
        left: 0;
    }
    .section-heading {
        height: 200px;
    }
    .section-heading .section-name {
        line-height: 200px;
    }
    .section-item img {
        padding-left: 25px;
    }
    /* About */
    .about-link {
        height: 250px;
    }
    .about-link a {
        line-height: 250px;
    }
    /* Lessons */
    .lessons-container img {
        padding-left: 45px;
    }
    .lessons-container .list-default {
        margin-left: 0;
    }

}

